# versioninfo_helper

./: .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  LICENSE.txt  README.md  example_dynamic.onefile.spec  example_simple.onefile.spec  noxfile.py  pyproject.toml  requirements-all.txt  requirements-core.txt
.github/workflows/: docs.yml  nox.yml  nox_integration_tests.yml  nox_lint.yml  nox_self_check.yml  nox_typecheck_mypy.yml  nox_typecheck_pyrefly.yml  nox_typecheck_pyright.yml  nox_unittests_coverage.yml  publish.yml  tests_coverage.yml  update_lockfile.yml
docs-theme/: theme.css
src/versioninfo_helper/: __init__.py  _backport.py
tests/: extract_VersionInfo.txt  full_metadata.spec  helloworld.py  no_metadata.spec  test_metadata.py  test_source.py
versioninfo_helper/: __init__.py
