[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "versioninfo_helper"
version = "1.0.0" 
description = "VersionInfo helper script for PyInstaller"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords= ["PyInstaller", "VersionInfo", "development"]
authors = [
  {name = "ReggX", email = "dev@reggx.eu" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  
  "Operating System :: Microsoft :: Windows",

  "Environment :: Win32 (MS Windows)",

  "Topic :: Software Development :: Libraries",

  "Typing :: Typed",
]
dependencies=[
  "pyinstaller>=5",
  "typing-extensions>=4.2.0, <5.0; python_version < '3.11'",
]

[project.urls] 
"Homepage" = "https://github.com/ReggX/versioninfo_helper"
"Bug Reports" = "https://github.com/ReggX/versioninfo_helper/issues"
"Source" = "https://github.com/ReggX/versioninfo_helper"


[tool.setuptools]
package-data = {"versioninfo_helper" = ["py.typed"]}


[tool.mypy]
strict = true
show_error_codes = true
ignore_missing_imports = true
