[build-system]
requires = ["setuptools>=77.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "versioninfo_helper"
dynamic = ["version"]
description = "VersionInfo helper script for PyInstaller"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["PyInstaller", "VersionInfo", "development"]
authors = [{ name = "ReggX", email = "dev@reggx.eu" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",

    "Operating System :: Microsoft :: Windows",

    "Environment :: Win32 (MS Windows)",

    "Topic :: Software Development :: Libraries",

    "Typing :: Typed",
]
dependencies = [
    "pyinstaller>=5; python_version < '3.12'",
    "pyinstaller>=5.5; python_version >= '3.11'",
    "pyinstaller>=5.13; python_version >= '3.12'",
    "typing-extensions>=4.13.2; python_version < '3.15'",
]

[dependency-groups]
docs = ["pdoc>=15.0.4"]
lint = ["black>=24.8.0", "flake8>=5.0.4", "ruff>=0.12.11"]
test = ["nox[uv]>=2025.5.1", "pytest-cov>=5.0.0"]
typecheck = [
    "mypy>=1.14.1",
    "pyrefly>=0.30.0",
    "pyright>=1.1.404",
    "types-pyinstaller>=6.11.0.20241028",
]
types = ["types-pyinstaller>=6.15.0.20250822"]

[project.urls]
"Homepage" = "https://github.com/ReggX/versioninfo_helper"
"Bug Reports" = "https://github.com/ReggX/versioninfo_helper/issues"
"Source" = "https://github.com/ReggX/versioninfo_helper"

[tool.setuptools_scm]

[tool.setuptools]
package-data = { "versioninfo_helper" = ["py.typed"] }

[tool.mypy]
files = ["src/**/*.py"]
exclude = ["src/versioninfo_helper/_backport.py"]
strict = true
show_error_codes = true
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
exclude = ["src/versioninfo_helper/_backport.py"]
strict = ["src"]

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["src/versioninfo_helper/_backport.py"]

[tool.isort]
multi_line_output = 5
line_length = 80
wrap_length = 80
use_parentheses = true
indent = '"    "'
lines_after_imports = 2
include_trailing_comma = true
balanced_wrapping = true
force_single_line = true

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
indent-width = 4


[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*imp module is deprecated:DeprecationWarning",
    "ignore:.*find_loader\\(\\) is deprecated:DeprecationWarning",
    "ignore:.*load_module\\(\\) method is deprecated:DeprecationWarning",
    "ignore:.*pkg_resources is deprecated as an API:UserWarning",
]

[tool.coverage.run]
branch = true
source = ["versioninfo_helper"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "cov.xml"

[tool.coverage.html]
directory = "htmlcov"
